# ruoyi_code_gen

./: .env  .gitignore  README.md  main.py  pyproject.toml
common/: Sql_client.py  ai_chat.py  read_file.py
config/: api_config.py  mysql_config.py
core/: gen_code.py  gen_table.py  gen_table2.py  import_table.py  insert_sysmenu.py  modify_gen_table.py
data/input/: functions.xlsx
