[project]
name = "ruoyi-mysql-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.79.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
